Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57040

QObjectPicker::clicked incorrectly emitted when the mouse release takes place from another entity having another QObjectPicker

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.0 Beta 2
    • 5.7.0
    • Qt3D
    • None
    • Linux, Windows

      When some QEntity has a QObjectPicker, the pressed() signal is emitted upon mouse press, the released() upon mouse release, and the clicked() signal will also be emitted if the mouse is still over the entity upon release.

      This means that if the mouse leaves the entity before releasing, the clicked() signal will not be emitted.

      Now, if you leave an entity while the mouse is pressed and enter another entity with another QObjectPicker instance, the signal clicked() will be emitted for the original entity (or rather its QObjectPicker).

      I think the signal should not be emitted in this case as it is not really a click event.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mkrus Mike Krus
            avaucher Alain Vaucher
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes