Clicked event only generated if pickers match

Only generate the click event if the press and
release object pickers are the same.

Task-number: QTBUG-57040
Change-Id: I95cfd57ddec52ca5339ed56604bcc4bf376e988d
Reviewed-by: Antti Määttä <antti.maatta@qt.io>